--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.5.1",
+    "@clerk/themes": "^2.1.48",
     "@lexical/react": "^0.20.0",
+    "@liveblocks/client": "^2.12.2",
+    "@liveblocks/react": "^2.12.2",
+    "@liveblocks/react-lexical": "^2.12.2",
+    "@liveblocks/react-ui": "^2.12.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
