--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.5.1",
-    "@clerk/themes": "^2.1.48",
-    "@lexical/react": "^0.20.0",
-    "@liveblocks/client": "^2.12.2",
-    "@liveblocks/react": "^2.12.2",
-    "@liveblocks/react-lexical": "^2.12.2",
-    "@liveblocks/react-ui": "^2.12.2",
+    "@clerk/nextjs": "^5.2.4",
+    "@clerk/themes": "^2.1.12",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.3.0",
+    "@liveblocks/node": "^2.12.2",
+    "@liveblocks/react": "^2.3.0",
+    "@liveblocks/react-lexical": "^2.3.0",
+    "@liveblocks/react-ui": "^2.3.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sentry/nextjs": "^8.18.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
-    "lexical": "^0.20.0",
-    "lucide-react": "^0.460.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.4",
+    "lexical": "^0.16.1",
+    "lucide-react": "^0.408.0",
+    "nanoid": "^5.0.7",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -33,7 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
